--- a/src/components/header.html
+++ b/src/components/header.html
@@ -9,7 +9,7 @@
         </nav>
 
         <div class="social-icons">
-            <a href="#" class="social-icon" aria-label="Resume">
+            <a href="/src/assets/Curriculo_Erich_Perusso.pdf" download="Curriculo_Erich_Perusso.pdf" class="social-icon" aria-label="Resume">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14 2H6C4.9 2 4.01 2.9 4.01 4L4 20C4 21.1 4.89 22 5.99 22H18C19.1 22 20 21.1 20 20V8L14 2ZM18 20H6V4H13V9H18V20ZM8 12V14H16V12H8ZM8 16V18H13V16H8Z"/>
                 </svg>
